# opencv_stitch_server

./: CMakeLists.txt  Makefile  Picture_Stitch.cpp  Picture_Stitch.h  README.md  sticth_detail.cpp  stitch.cfg  watch.sh  说明.doc  说明.txt
include/: Picture_Stitch.h~
src/: Picture_Stitch.cpp  sticth_detail.cpp  video.cpp
